@@ -1,6 +1,14 @@
+Mi 13. Okt 15:52:56 CEST 2010
+- release 3-1-2
+- code simplification: HAVE_RTIMER, builin_rand removed (allways on)
+- generation of iparith.inc, mpsr_Tok.inc do not depened on everythings:
+  only gentable*, table.h, tok.h grammar.h is needed
 - new command: rank
 - function: datetime()
 - new libs: resjung.lib, monomial.lib, surfacesignature.lib, multigrading.lib
+             fpadim_lib, findiff_lib, integralbasis_lib, paraplanecurves_lib,
+	     primdecint_lib, resbin_lib, 
+- rewritten: sagbi.lib, latex.lib
 
 Fr 20. Aug 13:36:49 CEST 2010
 - release 3-1-1-5
